--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,25 +1,20 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button color="primary">
-        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button routerLink="/register">Sign up</ion-button>
+      <ion-button routerLink="/register">Registrarse</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div id="header">
-    <h1>Login</h1>
-    <img src="assets/logo.png" />
+    <h1>My Personal Bank</h1>
+    <img src="assets/logo-banco.png"/>
   </div>
 
   <form id="form">
-    <app-input placeholder="Email"></app-input>
-    <app-input type="password" placeholder="Password"></app-input>
-    <ion-button expand="block" shape="round">Login</ion-button>
+    <app-input placeholder="Correo electrónico"></app-input>
+    <app-input type="password" placeholder="Contraseña"></app-input>
+    <ion-button expand="block" shape="round">Ingresar</ion-button>
   </form>
 </ion-content>
