--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -9,12 +9,18 @@
 <ion-content>
   <div id="header">
     <h1>My Personal Bank</h1>
-    <img src="assets/logo-banco.png"/>
+    <img src="assets/logo-banco.png" />
   </div>
 
   <form id="form">
-    <app-input placeholder="Correo electrónico"></app-input>
-    <app-input type="password" placeholder="Contraseña"></app-input>
-    <ion-button expand="block" shape="round">Ingresar</ion-button>
+    <ion-item class="ion-margin-bottom">
+      <ion-input placeholder="Correo electrónico" #email required></ion-input>
+    </ion-item>
+    <ion-item class="ion-margin-bottom">
+      <ion-input type="password" placeholder="Contraseña" #password required></ion-input>
+    </ion-item>
+    <ion-button type="submit" (click)="onLogin(email,password)" expand="block" shape="round">Ingresar</ion-button>
+    <ion-button type="submit" (click)="onLoginGoogle()" color="danger" expand="block" shape="round">Ingresar con Google
+    </ion-button>
   </form>
 </ion-content>
