--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -14,10 +14,16 @@
 <ion-content>
   <h1>Registrarse</h1>
 
-  <form id="form">
-    <app-input placeholder="Nombre"></app-input>
-    <app-input placeholder="Correo electrónico"></app-input>
-    <app-input type="password" placeholder="Contraseña"></app-input>
-    <ion-button expand="block" shape="round">Registrar</ion-button>
+  <form [formGroup]=formulario>
+    <ion-item class="ion-margin-bottom">
+      <ion-input placeholder="Nombre"></ion-input>
+    </ion-item>
+    <ion-item class="ion-margin-bottom">
+      <ion-input placeholder="Correo electrónico" #email></ion-input>
+    </ion-item>
+    <ion-item class="ion-margin-bottom">
+      <ion-input type="password" placeholder="Contraseña" #password></ion-input>
+    </ion-item>
+    <ion-button type="submit" (click)="onRegister(email,password)" expand="block" shape="round">Registrar</ion-button>
   </form>
 </ion-content>
