--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,3 +1,3 @@
 <ion-item class="ion-margin-bottom">
-  <ion-input [type]="type" [placeholder]="placeholder"></ion-input>
+  <ion-input #{{referencia}} [type]="type" [placeholder]="placeholder"></ion-input>
 </ion-item>
